内存压缩&指标修复